//! Functions for converting between Casper types and their Protobuf equivalents which are
//! defined in protobuf/io/casperlabs/ipc/ipc.proto

mod deploy_item;
mod deploy_result;
mod exec_config;
mod executable_deploy_item;
mod execute_request;
mod execution_effect;
mod genesis_account;
mod genesis_config;
mod get_era_validators_request;
mod host_function_costs;
mod opcode_costs;
mod query_request;
mod ratio;
mod run_genesis_request;
mod step;
mod storage_costs;
mod system_config;
mod upgrade_request;
mod wasm_config;
